Skip to content

Apple: visionOS simulator error

when i build my C++ project for XRSimulator, i got an error: clang: error: cannot specify '-mtargetos=xros1.0' along with '-target x86_64-apple-xros1.0-simulator'

the error is caused by !8581 (merged) @gjasny

I temporary solve the error by comment set(CMAKE_${lang}_OSX_DEPLOYMENT_TARGET_FLAG "-mtargetos=xros") for XRSimulator in Apple-Clang.cmake

Edited by Brad King
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information